feat: make swagger api for endpoints
