# pkg/handler/item.go
@@ -8,6 +8,19 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Create TODO Item
+// @Security apiKeyAuth
+// @Description will create new item in list of current user
+// @ID create-todo-item
+// @Tags items
+// @Accepted json
+// @Produce json
+// @Param payload body todoapp.TodoItem true "item info"
+// @Success 200 {string} string "id"
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/:id/items [post]
 func (h *Handler) createItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -42,6 +55,18 @@ type getAllItemsResponse struct {
 	Data []todoapp.TodoItem
 }
 
+// @Summary Get All TODO Items
+// @Security apiKeyAuth
+// @Description return all items from choosen list of current user
+// @ID get-all-todo-items
+// @Tags items
+// @Accepted json
+// @Produce json
+// @Success 200 {object} object handler.getAllItemsResponse
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/lists/:id/items [get]
 func (h *Handler) getAllItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -65,6 +90,18 @@ func (h *Handler) getAllItem(c *gin.Context) {
 	})
 }
 
+// @Summary Get TODO Items By ID
+// @Security apiKeyAuth
+// @Description return item by ID of current user
+// @ID get-todo-item-by-id
+// @Tags items
+// @Accepted json
+// @Produce json
+// @Success 200 {object} todoapp.TodoItem
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/:id [get]
 func (h *Handler) getItemById(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -86,6 +123,20 @@ func (h *Handler) getItemById(c *gin.Context) {
 	c.JSON(http.StatusOK, item)
 }
 
+// @Summary Update TODO Items By ID
+// @Security apiKeyAuth
+// @Description update item by ID of current user
+// @ID update-todo-item
+// @Tags items
+// @Accepted json
+// @Produce json
+// Param q query string true "name search by id"
+// @Param payload body todoapp.UpdateItemInput true "updated item info"
+// @Success 200 {string} string "status"
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/:id [put]
 func (h *Handler) updateItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -114,6 +165,18 @@ func (h *Handler) updateItem(c *gin.Context) {
 	})
 }
 
+// @Summary Delete TODO Items By ID
+// @Security apiKeyAuth
+// @Description delete item by ID of current user
+// @ID delete-todo-item
+// @Tags items
+// @Accepted json
+// @Produce json
+// @Success 200 {string} string "status"
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/items/:id [delete]
 func (h *Handler) deleteItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
